started implementing customizable background image feature. Fixed bug that caused horizontal scrolling when moving grid elements.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -36,3 +36,28 @@
     transform: rotate(360deg);
   }
 }
+
+.main:before {
+  content: "";
+  position: fixed;
+  display: block;
+  height: 110%;
+  left: -5%;
+  top: -5%;
+  width: 110%;
+  background-image: url(../images/background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+
+.main {
+  z-index: 0;
+  overflow: auto;
+}
