--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -18,4 +18,5 @@
   transition: all 0.5s ease-in;
   width: 99.5vw;
   height: 92vh;
+  overflow: hidden;
 }
